# plugin-ci-example

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  SimplePlugin.jucer  azure-pipelines.yml  gitlab-ci.yml  win_builds.sh
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: cmake.yml  projucer.yml
cmake/: JucerClap.cmake
installers/mac/: Intro.txt  SimplePlugin.pkgproj  build_mac_installer.sh
installers/windows/: SimplePlugin_Install_Script.iss  SimplePlugin_Install_Script.iss.bak  build_win_installer.sh
modules/: CMakeLists.txt
res/: gui.xml
scripts/: mac_builds.sh  validate.sh  win-build.ps1
src/: CMakeLists.txt  SimplePlugin.cpp  SimplePlugin.h
src/headless/: CMakeLists.txt  main.cpp
src/headless/tests/: GainTest.cpp  UnitTests.h
